11.25 完成后台 JWT 身份验证流程
- 完善部门和用户初始化功能
- 实现标准后台 JWT 生成和验证逻辑，定义包含核心方法的AuthsHandler接口
- 注册身份验证路由
- 实现请求日志中间件和本地化中间件
